cloud/12-kubernetes-rbac-network/manifests/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: payments
  labels:
    env: lab
    module: "12"
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    env: lab
    module: "12"
